--- a/src/scss/view.scss
+++ b/src/scss/view.scss
@@ -115,3 +115,11 @@
         }
     }
 }
+
+.breadbutter-locked-limit-content {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    touch-action: none;
+    overscroll-behavior: contain;
+}
