--- a/src/scss/view-button.scss
+++ b/src/scss/view-button.scss
@@ -1222,3 +1222,9 @@
         }
     }
 }
+.bb-icon-line-break {
+    flex-basis: 100%;
+    width: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+}
