--- a/src/scss/view.scss
+++ b/src/scss/view.scss
@@ -14,6 +14,7 @@
 
         input {
             width: 100%;
+            max-width: 100%;
             background-color: rgba(0,0,0,0) !important;
             color: #1c1958 !important;
             font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -79,7 +80,7 @@
     box-shadow: 0 32px 64px 0 rgba(0, 0, 0, 0.26);
     max-width: 275px;
     opacity: 1;
-    z-index: 10001;
+    z-index: 20001;
 
     &.hide {
         display: none;
@@ -117,9 +118,9 @@
 }
 
 .breadbutter-locked-limit-content {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    touch-action: none;
-    overscroll-behavior: contain;
+    width: 100vw !important;
+    height: 100vh !important;
+    overflow: hidden !important;
+    touch-action: none !important;
+    overscroll-behavior: contain !important;
 }
